# neural-networks

./: .gitignore  2main.cpp  CMakeLists.txt  README.md  RUN  load_modules.sh  main.cpp
NNLib/: Activation.cpp  Activation.h  BaseLayer.cpp  BaseLayer.h  CMakeLists.txt  Dense.cpp  Dense.h  ILayer.h  Input.cpp  Input.h  LayerException.h  NNLib.hpp  Network.cpp  Network.h  NetworkException.h  TrainUtils.cpp  TrainUtils.h
NNLib.tests/: CMakeLists.txt  LayerTest.cpp  XORTest.cpp
dataload/: CMakeLists.txt  DataLoad.hpp  DataLoadInternalException.h  DataLoader.cpp  DataLoader.h  EOFException.h  PicData.cpp  PicData.h  PreprocessingUtils.cpp  PreprocessingUtils.h  testlabel.txt
dataload.tests/: CMakeLists.txt  DataloadTest.cpp
mathlib/: ActivationFunc.cpp  ActivationFunc.h  CMakeLists.txt  ErrorFunc.cpp  ErrorFunc.h  MathLib.hpp  Matrix.cpp  Matrix.h  MatrixException.h
mathlib.tests/: ActivationFuncTest.cpp  ActivationTest.cpp  CMakeLists.txt  ErrorFuncTest.cpp  MatrixTest.cpp
mathlib/activation/: Activation.hpp  IActivation.h  LeakyReLU.h  LogSoftmax.h  ReLU.h  Sigmoid.h  Softmax.h
